# Kalenda

./: .gitignore  LICENSE  README.md  package.json
backend/: .env.example  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.service.ts
backend/src/bid/: bid.controller.ts  bid.entity.ts  bid.module.ts  bid.service.ts
backend/src/dispute/: dispute.controller.ts  dispute.entity.ts  dispute.module.ts  dispute.service.ts
backend/src/notification/: notification.controller.ts  notification.service.ts
backend/src/solana/: solana.service.ts
backend/src/timeslot/: timeslot.controller.ts  timeslot.entity.ts  (+2 more)
backend/test/: user.service.spec.ts
docs/: CORE_FEATURES.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DISPUTE_RESOLUTION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  SMART_CONTRACT_SETUP.md  TESTING_STRATEGY.md  UI_COMPONENTS.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/__tests__/: format.test.ts
frontend/components/: WalletConnect.tsx
frontend/hooks/: useKalenda.ts  useNotifications.ts
frontend/pages/: _app.tsx  creator.tsx  explore.tsx  index.tsx
frontend/styles/: globals.css
frontend/utils/: format.ts
programs/: Anchor.toml
programs/kalenda-escrow/: Cargo.toml
programs/kalenda-escrow/src/: lib.rs
programs/kalenda-marketplace/: Cargo.toml
programs/kalenda-marketplace/src/: lib.rs
programs/kalenda-nft/: Cargo.toml
programs/kalenda-nft/src/: lib.rs
programs/tests/: kalenda-escrow.ts  kalenda-marketplace.ts  kalenda-nft.ts
(+12 files in other folders)
